<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!-- WARNING: Eclipse auto-generated file.
              Any modifications will be overwritten.
              To include a user specific buildfile here, simply create one in the same
              directory with the processing instruction <?eclipse.ant.import?>
              as the first entry and export the buildfile again. --><project basedir="." default="build" name="LibreriaWeb">
    <property environment="env"/>
    <property name="ECLIPSE_HOME" value="../../../eclipse/jee-2022-09/eclipse/"/>
    <property name="junit.output.dir" value="junit"/>
    <property name="debuglevel" value="source,lines,vars"/>
    <property name="target" value="11"/>
    <property name="source" value="11"/>
    <path id="Web App Libraries.libraryclasspath">
        <pathelement location="src/main/webapp/WEB-INF/lib/javax.servlet-api-4.0.1.jar"/>
    </path>
    <path id="EAR Libraries.libraryclasspath"/>
    <path id="JUnit 5.libraryclasspath">
        <pathelement location="../../../.p2/pool/plugins/junit-jupiter-api_5.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-jupiter-engine_5.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-jupiter-migrationsupport_5.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-jupiter-params_5.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-commons_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-engine_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-launcher_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-runner_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-suite-api_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-suite-engine_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-platform-suite-commons_1.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/junit-vintage-engine_5.9.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/org.opentest4j_1.2.0.jar"/>
        <pathelement location="../../../.p2/pool/plugins/org.apiguardian.api_1.1.2.jar"/>
        <pathelement location="../../../.p2/pool/plugins/org.junit_4.13.2.v20211018-1956.jar"/>
        <pathelement location="../../../.p2/pool/plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
    </path>
    <path id="Server Runtime [Apache Tomcat v10.0].libraryclasspath">
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/annotations-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/catalina-ant.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/catalina-ha.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/catalina-ssi.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/catalina-storeconfig.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/catalina-tribes.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/catalina.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/ecj-4.20.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/el-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/jakartaee-migration-1.0.4-shaded.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/jasper-el.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/jasper.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/jaspic-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/jsp-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/servlet-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-api.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-coyote.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-dbcp.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-cs.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-de.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-es.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-fr.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-ja.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-ko.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-pt-BR.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-ru.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-i18n-zh-CN.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-jdbc.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-jni.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-util-scan.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-util.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/tomcat-websocket.jar"/>
        <pathelement location="../../../../../Program Files/Apache Software Foundation/Tomcat 10.0/lib/websocket-api.jar"/>
    </path>
    <path id="LibreriaWeb.classpath">
        <pathelement location="build/classes"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <pathelement location="externalLibrary/mybatis-3.4.5.jar"/>
        <pathelement location="externalLibrary/mysql-connector-java-8.0.29.jar"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JUnit 5.libraryclasspath"/>
        <pathelement location="externalLibrary/taglibs-standard-impl-1.2.5.jar"/>
        <pathelement location="externalLibrary/itextpdf-5.5.9.jar"/>
        <path refid="Server Runtime [Apache Tomcat v10.0].libraryclasspath"/>
    </path>
    <path id="run.java.classpath">
        <path refid="LibreriaWeb.classpath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <pathelement location="externalLibrary/mybatis-3.4.5.jar"/>
        <pathelement location="externalLibrary/mysql-connector-java-8.0.29.jar"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JUnit 5.libraryclasspath"/>
        <pathelement location="externalLibrary/taglibs-standard-impl-1.2.5.jar"/>
        <pathelement location="externalLibrary/itextpdf-5.5.9.jar"/>
        <path refid="Server Runtime [Apache Tomcat v10.0].libraryclasspath"/>
    </path>
    <path id="run.Progetto.classpath">
        <path refid="LibreriaWeb.classpath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <pathelement location="externalLibrary/mybatis-3.4.5.jar"/>
        <pathelement location="externalLibrary/mysql-connector-java-8.0.29.jar"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JUnit 5.libraryclasspath"/>
        <pathelement location="externalLibrary/taglibs-standard-impl-1.2.5.jar"/>
        <pathelement location="externalLibrary/itextpdf-5.5.9.jar"/>
        <path refid="Server Runtime [Apache Tomcat v10.0].libraryclasspath"/>
    </path>
    <path id="run.TestControllerAddBookPage.classpath">
        <path refid="LibreriaWeb.classpath"/>
        <path refid="Web App Libraries.libraryclasspath"/>
        <pathelement location="externalLibrary/mybatis-3.4.5.jar"/>
        <pathelement location="externalLibrary/mysql-connector-java-8.0.29.jar"/>
        <path refid="EAR Libraries.libraryclasspath"/>
        <path refid="JUnit 5.libraryclasspath"/>
        <pathelement location="externalLibrary/taglibs-standard-impl-1.2.5.jar"/>
        <pathelement location="externalLibrary/itextpdf-5.5.9.jar"/>
        <path refid="Server Runtime [Apache Tomcat v10.0].libraryclasspath"/>
    </path>
    <target name="init">
        <mkdir dir="build/classes"/>
        <copy includeemptydirs="false" todir="build/classes">
            <fileset dir="src/main/java">
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
        <copy includeemptydirs="false" todir="build/classes">
            <fileset dir="src/test/java">
                <exclude name="**/*.java"/>
            </fileset>
        </copy>
    </target>
    <target name="clean">
        <delete dir="build/classes"/>
    </target>
    <target depends="clean" name="cleanall"/>
    <target depends="build-subprojects,build-project" name="build"/>
    <target name="build-subprojects"/>
    <target depends="init" name="build-project">
        <echo message="${ant.project.name}: ${ant.file}"/>
        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
            <src path="src/main/java"/>
            <src path="src/test/java"/>
            <classpath refid="LibreriaWeb.classpath"/>
        </javac>
    </target>
    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
        <copy todir="${ant.library.dir}">
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </copy>
        <unzip dest="${ant.library.dir}">
            <patternset includes="jdtCompilerAdapter.jar"/>
            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
        </unzip>
    </target>
    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
        <antcall target="build"/>
    </target>
    <target name="java">
        <mkdir dir="${junit.output.dir}"/>
        <junit fork="yes" printsummary="withOutAndErr">
            <formatter type="xml"/>
            <jvmarg line="-ea"/>
            <classpath refid="run.java.classpath"/>
        </junit>
    </target>
    <target name="Progetto">
        <java classname="view.Main" failonerror="true" fork="yes">
            <jvmarg line="--module-path &quot;C:\Program Files\Java\jdk-11.0.9\lib\javafx-sdk-11.0.2\lib&quot; --add-modules javafx.controls,javafx.fxml"/>
            <classpath refid="run.Progetto.classpath"/>
        </java>
    </target>
    <target name="TestControllerAddBookPage">
        <mkdir dir="${junit.output.dir}"/>
        <junit fork="yes" printsummary="withOutAndErr">
            <formatter type="xml"/>
            <test name="test.TestControllerAddBookPage" todir="${junit.output.dir}"/>
            <jvmarg line="-ea"/>
            <classpath refid="run.TestControllerAddBookPage.classpath"/>
        </junit>
    </target>
    <target name="junitreport">
        <junitreport todir="${junit.output.dir}">
            <fileset dir="${junit.output.dir}">
                <include name="TEST-*.xml"/>
            </fileset>
            <report format="frames" todir="${junit.output.dir}"/>
        </junitreport>
    </target>
</project>
